# CosmoServer

./: .clinerules  .gitignore  HUBITAT_PLUGIN_TEST_PLAN.md  PLUGIN_PLAN.md  exec_utils.py  main.py  mcps.py  pyproject.toml  startup.py  util.py
agent/: __init__.py  complex_prompt.txt  main_prompt.txt  simple_prompt.txt
database/: __init__.py  base.py  models.py
models/: api.py  rules.py
routes/: crud.py  rpc.py
src/cosmoserver/: __init__.py  __main__.py  cli.py  exec_utils.py  main.py  mcps.py  startup.py
src/cosmoserver/agent/: __init__.py  simple_prompt.txt
src/cosmoserver/database/: __init__.py  globals.py  models.py  prefs.py
src/cosmoserver/models/: actions.py  globals.py  plugins.py  preferences.py  rules.py
src/cosmoserver/plugins/: __init__.py  loader.py  utils.py
src/cosmoserver/plugins/cosmo_server/: __init__.py  cosmo_server_plugin.py  cosmo_utils.py
src/cosmoserver/routes/: crud.py  globals.py  plugins.py  preferences.py  rpc.py
